--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -38,6 +38,16 @@ steps:
     submodules: false # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
     persistCredentials: false # set to 'true' to leave the OAuth token in the Git config after the initial fetch
 
+  - task: NodeTool@0
+    displayName: Installing Node
+    inputs:
+      versionSpec: '14.x' 
+
+  - task: CmdLine@2
+    displayName: Installing Yarm
+    inputs:
+      script: npm install -g yarn
+
   # First do a build of the local package, since we point the cli at the local files, it needs to be pre-built
   - template: yarn-install.yml
 
