--- a/vnext/PropertySheets/WinUI.props
+++ b/vnext/PropertySheets/WinUI.props
@@ -1,8 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Label="WinUI3 versioning">
     <!-- This value is also used by the CLI, see /packages/@react-native-windows/generate-windows -->
     <WinUI3Version>3.0.0-preview3.201113.0</WinUI3Version>
+  </PropertyGroup>
+
+  <PropertyGroup Label="WinUI2x versioning">
+		<!--This value is also used by the CLI, see /packages/@react-native-windows/generate-windows -->
+    <WinUI2xVersion>2.5.0</WinUI2xVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(UseWinUI3)'=='true'">
@@ -19,7 +24,7 @@
 
   <PropertyGroup Condition="'$(UseWinUI3)'!='true'">
     <WinUIPackageName>Microsoft.UI.Xaml</WinUIPackageName>
-    <WinUIPackageVersion>2.3.191129002</WinUIPackageVersion>
+    <WinUIPackageVersion>$(WinUI2xVersion)</WinUIPackageVersion>
     <!-- In WinUI 2.x, the props file is imported for us by the targets file -->
     <WinUIPackageProps />
   </PropertyGroup>
