--- a/packages/@react-native-windows/cli/package.json
+++ b/packages/@react-native-windows/cli/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@react-native-windows/telemetry": "^0.0.0-canary.11",
+    "@rnw-scripts/package-utils": "^0.0.11",
     "chalk": "^4.1.0",
     "cli-spinners": "^2.2.0",
     "envinfo": "^7.5.0",
