Use MsBuilds nuget restore operation in CI rather than separate nuget restore command

--- a/.ado/jobs/playground.yml
+++ b/.ado/jobs/playground.yml
@@ -66,14 +66,6 @@ jobs:
           script: |
             echo ##vso[task.setvariable variable=BuildWinUI3Properties]/p:AppxPackageSigningEnabled=false /p:UseWinUI3=true
 
-      - task: NuGetCommand@2
-        displayName: NuGet restore - Playground
-        inputs:
-          command: restore
-          restoreSolution: packages/playground/windows/$(SolutionFile)
-          verbosityRestore: Detailed # Options: quiet, normal, detailed
-
-
       - task: VSBuild@1
         displayName: VSBuild - Playground
         inputs:
@@ -86,6 +78,8 @@ jobs:
           maximumCpuCount: false # Optional
           restoreNugetPackages: false # Optional
           msbuildArgs:
+            /restore
+            /p:RestorePackagesConfig=true
             /p:PreferredToolArchitecture=$(MSBuildPreferredToolArchitecture)
             /p:PlatformToolset=$(MSBuildPlatformToolset)
             $(BuildWinUI3Properties)
