--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -25,7 +25,7 @@ stages:
               filePath: .ado/shouldSkipPRBuild.ps1
 
   - stage: Build
-    displayName: Build and Cli
+    displayName: Build 🔨
     dependsOn: Setup
     condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
     jobs:
@@ -39,13 +39,13 @@ stages:
   
       - template: jobs/nuget-desktop.yml
 
-      # It would be nice to have this in a separate stage, but the nuget cli tests depend on the Universal build.
       - template: jobs/cli-init.yml
         parameters:
-          buildEnvironment: PullRequest
+          # The Nuget CLI verification is part of 'Build' to speed up the verification
+          buildEnvironment: PullRequestNuGet
 
   - stage: IntegrationTests
-    displayName: Integration Tests
+    displayName: Tests 🧪
     dependsOn: Setup
     condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'False' )
     jobs:
@@ -68,3 +68,13 @@ stages:
       - template: jobs/integration-test.yml
         parameters:
           buildEnvironment: PullRequest
+
+  - stage: CLI 🖥
+    displayName: Integration Tests
+    dependsOn: Setup
+    condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'False' )
+    jobs:
+      - template: jobs/cli-init.yml
+        parameters:
+          buildEnvironment: PullRequest
+
