Fix Publish pipeline

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -4,6 +4,7 @@ variables:
   - template: variables/msbuild.yml
   - template: variables/release.yml
   - template: variables/vs2019.yml
+  - group: RNW Secrets
 
 schedules:
 - cron: "0 5 * * *" # 5AM Daily UTC (10PM Daily PST)
@@ -54,7 +55,7 @@ jobs:
       - task: CmdLine@2
         displayName: Create GitHub Release
         inputs:
-          script: npx --ignore-existing @rnw-scripts/create-github-releases --authToken $(GITHUB_API)
+          script: npx --ignore-existing @rnw-scripts/create-github-releases --authToken $(githubAuthToken)
 
       - task: CmdLine@2
         displayName: Set Version Env Vars
