--- a/.ado/templates/configure-git.yml
+++ b/.ado/templates/configure-git.yml
@@ -8,5 +8,5 @@ steps:
         git config --global user.email "53619745+rnbot@users.noreply.github.com"
         git config --global user.name "React-Native-Windows Bot"
   
-  - script: git remote set-url origin https://rnbot:@(githubAuthToken)@github.com/path/to/repo.git
+  - script: git remote set-url origin https://rnbot:$(githubAuthToken)@github.com/path/to/repo.git
     displayName: Set Permissions to push
