--- a/.ado/templates/integration-test-job.yml
+++ b/.ado/templates/integration-test-job.yml
@@ -27,7 +27,7 @@ jobs:
             
       - template: prepare-env.yml
 
-      - script: .ado\SetupLocalDumps.cmd integrationtest
+      - script: .ado\scripts\SetupLocalDumps.cmd integrationtest
         displayName: Set LocalDumps
 
       # The build is more likely to crash after we've started other bits that
