--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -38,6 +38,12 @@ steps:
     inputs:
       script: npm install -g yarn
 
+  # For Appium windows we have to depend on a node package that depends on python (gyp) to perform some install scripts
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x' 
+      addToPath: true 
+
   - template: yarn-install.yml
 
   - task: CmdLine@2
