--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -45,6 +45,7 @@
     "@rnw-scripts/eslint-config": "0.1.6",
     "@rnw-scripts/jest-unittest-config": "0.1.1",
     "@rnw-scripts/just-task": "0.0.6",
+    "@rnw-scripts/package-utils": "0.0.11",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/async": "^3.2.3",
     "@types/chalk": "^2.2.0",
